--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,17 +12,8 @@ project(Foo
     LANGUAGES CXX
 )
 
-add_library(${PROJECT_NAME} STATIC)
+include_directories("include/")
 
-target_sources(${PROJECT_NAME} 
-    PRIVATE
+add_library(${PROJECT_NAME}
     "src/foo.cpp"
-)
-
-target_include_directories(${PROJECT_NAME}
-    PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src
-    PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
