--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,23 @@ else()
     cmake_policy(VERSION 3.29)
 endif()
 
-project(Foo
-    VERSION 0.1
-    DESCRIPTION "a very nice Template"
-    LANGUAGES CXX
+set(LIBRARY_NAME foo)
+
+set(LIBRARY_VERSION 1.0.0)
+
+set(SOURCES
+  src/foo.cpp
 )
 
-include_directories("include/")
+include_directories(
+    PUBLIC
+    "include/foo.h"
+)
 
-add_library(${PROJECT_NAME}
-    "src/foo.cpp"
+add_library(${LIBRARY_NAME} ${SOURCES})
+
+set_target_properties(${LIBRARY_NAME} PROPERTIES
+  VERSION ${LIBRARY_VERSION}
+  SOVERSION ${LIBRARY_VERSION}
+  OUTPUT_NAME ${LIBRARY_NAME}
 )
